hard-gists/8c9644f9666d60cad37b/run.log
=== Docker Run Log for 8c9644f9666d60cad37b ===
Started at: Mi 29. Okt 18:08:31 CET 2025

[2025-10-29 18:08:32] START: Running container for 8c9644f9666d60cad37b
[2025-10-29 18:08:32] SUCCESS: Container caa2e3dd676c278b1d530fea69d2376bfcefd12a17c145c311c983647861d664 started for 8c9644f9666d60cad37b
=== Container logs for 8c9644f9666d60cad37b ===
  File "/snippet.py", line 56
    print "insert_sqlite_rows(1000):   ", timeit.timeit("insert_sqlite_rows(1000)", setup="from __main__ import insert_sqlite_rows", number=1)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8c9644f9666d60cad37b ===
[2025-10-29 18:08:34] INFO: Container caa2e3dd676c278b1d530fea69d2376bfcefd12a17c145c311c983647861d664 has stopped
